test/exec/service-mesh-test1/.configs/app-14.yaml
mapping:
  app:
  app2:
  app3:
ring_size: 10000
buffer_count: 16384
buffer_size: 80000
num_threads: 1
frontend_pool_connections: 100
egress_listener_port: 4007
ingress_listener_port: 3007
ingress_upstream_host: 172.17.0.1
ingress_upstream_port: 2007
is_ingress: False
is_frontend: True
report_latency: True
per_endpoint_limit: 10
ppm_limit: 14
name: app
