test/exec/service-mesh-test1/.configs/ingress-plain.yaml
api_list:
  - app
  - app2
mapping:
  app:
  app2:
ring_size: 10000
buffer_count: 16384
buffer_size: 80000
num_threads: 1
frontend_pool_connections: 4000
egress_listener_port: 4007
ingress_listener_port: 3000
ingress_upstream_host: 172.17.0.1
ingress_upstream_port: 2007
is_ingress: False
is_frontend: True
is_plain_frontend: True
report_latency: True
per_api_limit: 0 # not used
ppm_limit: 0 # not used
name: ingress
