test/exec/service-mesh-test1/.configs/ingress.yaml
routing:
  app:
    upstream:
      host: app-sidecar
      port: 3007
    slo: 12
  app2:
    upstream:
      host: app-sidecar
      port: 3007
    slo: 7
  app3:
    upstream:
      host: app-sidecar
      port: 3007
    slo: 16
mapping:
  app:
    downstreams:
      - app
    listen_port: 3000
  app2:
    downstreams:
      - app2
    listen_port: 3008
  app3:
    downstreams:
      - app3
    listen_port: 3009
ring_size: 12000
buffer_count: 16384
buffer_size: 10000
num_threads: 3
ingress_pool_connections: 100
egress_listener_port: 3000
ingress_listener_port: 4000
ingress_upstream_host: 172.17.0.1
ingress_upstream_port: 2000
is_ingress: True
is_frontend: False
report_latency: True
name: ingress
